# nick_generator

./: Alphabet.cpp  Alphabet.h  CMakeLists.txt  LICENSE  NickGenerator.cpp  NickGenerator.h  README.md  main.cpp  nick_generator.kdev4
.kdev4/: nick_generator.kdev4
